deployments/food-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: karmarkar
  name: food-service
  labels:
    app: food
spec:
  type: ClusterIP
  ports:
    - name: "1234"
      port: 1234
  selector:
    app: food
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: karmarkar
  name: food-app
  labels:
    app: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: karmarkar
      labels:
        app: food
        tier: frontend
    spec:
      containers:
      - image: nivantdot/food
        name: food
        ports:
        - containerPort: 1234
          name: food
        volumeMounts:
        - name: food-persistent-storage
          mountPath: /var/www/html
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
      volumes:
      - name: food-persistent-storage
        persistentVolumeClaim:
          claimName: rg-pv-claim
