deployments/mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karmarkar
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: karmarkar
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: karmarkar
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          limits:
            memory: 1024Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
