deployments/app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karmarkar
---
apiVersion: v1
kind: Service
metadata:
  namespace: karmarkar
  name: food-delivery-service
spec:
  selector:
    app: food-delivery
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: karmarkar
  name: food-delivery-statefulset
spec:
  selector:
    matchLabels:
      app: food-delivery 
  serviceName: "food-delivery-service"
  replicas: 1
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app: food-delivery
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: food
        image: nivantdot/food:1.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: karmarkar
  name: food-delivery-ingress
spec:
  rules:
  - host: "foodelivery.net"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: food-delivery-service
            port:
              number: 8080
