deployments/food-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: karmarkar
  name: food-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
  rules:
  - host: mymoto1100.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: food-service
            port:
              number: 1234
  - host: admin.mymoto1100.com
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: food-default-backend
            port:
              number: 80
